src/ui/readarr_ui/system/snapshots/managarr__ui__readarr_ui__system__system_details_ui__system_details_ui_tests__tests__snapshot_tests__popup_SystemTaskStartConfirmPrompt.snap
---
source: src/ui/readarr_ui/system/system_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Tasks  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │   Name                               Interval                    Last Execution               Next Execution             │                     
                    │=> Backup task                        2 hours                     30 minutes ago               1 hour                     │                     
                    │   Rss sync task                      15 minutes                  8 minutes ago                3 minutes                  │                     
                    │   Housekeeping task                  1 day                       4 hours ago                  18 hours                   │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                              ╭──────────────────────  Start Task  ───────────────────────╮                               │                     
                    │                              │   Do you want to manually start this task: Backup task?   │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │╭────────────────────────────╮╭───────────────────────────╮│                               │                     
                    │                              ││             Yes            ││            No             ││                               │                     
                    │                              │╰────────────────────────────╯╰───────────────────────────╯│                               │                     
                    │                              ╰───────────────────────────────────────────────────────────╯                               │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
